# llvm-adt

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  llvm-sha.txt
.github/workflows/: ci.yml  pre-commit.yml  update-llvm-sha.yml
include/llvm/Config/: llvm-config.h
include/llvm/Support/: Capacity.h  Error.h  NativeFormatting.h
lib/: Support.c  Support.cpp
lib/Support/: ARMWinEH.cpp  ConvertUTFWrapper.cpp  IntervalMap.cpp  JSON.cpp  SlowDynamicAPInt.cpp
scripts/: update.py
tests/: CMakeLists.txt
tests/ADT/: DAGDeltaAlgorithmTest.cpp  DeltaAlgorithmTest.cpp  DepthFirstIteratorTest.cpp  FoldingSet.cpp  SmallVectorTest.cpp
tests/Support/: ConvertUTFTest.cpp  DebugTest.cpp  MemoryBufferTest.cpp  RegexTest.cpp  raw_ostream_test.cpp
